feat: add flash sale with Redis Lua, RabbitMQ, Quartz, and Swagger